--- a/css/review.css
+++ b/css/review.css
@@ -14,8 +14,8 @@ a{
 }
 header{
     width: 100%;
-    height: 100px;
-    margin-bottom: 15px;
+    height: 80px;
+    margin-bottom: 30px;
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.291) 0px 8px 24px;
     position: relative;
@@ -44,7 +44,7 @@ body{
     align-items: center;
     padding-bottom: 10px;
     margin-bottom: 10px;
-    border-bottom: rgb(242,142,38) solid 2px;
+    border-bottom: #f25d07 solid 2px;
 }
 .profile p{
     position: absolute;
@@ -72,14 +72,27 @@ body{
 .reg_date{
     right: 10px;
 }
+.text_area p{
+    display: inline-block;
+}
 .text_area p i{
     margin: 0 -5px;
     margin-bottom: 10px;
     padding-left: 5px;
-    color: #ffc170;
+    color: #f27b35;
 }
-.text_area>p:nth-child(2){
+.text_area div:first-child a{
+    float: right;
+    padding: 0 5px;
+    color: #8c7568;
+}
+.text_area div:first-child a:hover{
+    color: #333;
+    text-decoration: underline;
+}
+.text_area > p:nth-child(2){
     margin: 15px 0;
+    line-height: 20px;
 }
 .review_photo{
     display: flex;
@@ -93,10 +106,10 @@ body{
     margin-right: 10px;
     cursor: pointer;
 }
-.text_area a{
+.text_area > a{
     display: inline-block;
     margin-top: 10px;
-    color: coral;
+    color: #f25d07;
     text-decoration: underline;
 }
 
@@ -199,3 +212,127 @@ body{
   .mySwiper .swiper-slide-thumb-active {
     opacity: 1;
   }
+
+/*----------- REVIEW_WRITE -----------------*/
+.text_area .star_num{
+    float: left;
+    width: 300px;
+}
+.text_area .star_num p{
+    margin-right: 5px;
+    font-size: 18px;
+    line-height: 25px;
+}
+.text_area .write_store{
+    margin-top: 5px;
+    float: right;
+
+}
+.star {
+    position: relative;
+    font-size: 25px;
+    color: #ddd;
+}
+.star input{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+.star span {
+    width: 0;
+    position: absolute; 
+    left: 0;
+    color: #f25b35;
+    overflow: hidden;
+    pointer-events: none;
+}
+.text_area textarea{
+    width: 488px;
+    height: 300px;
+    padding: 5px;
+    margin-top: 10px;
+    font-size: 16px;
+    resize: none;
+    border: #8c7568 solid 1px;
+}
+
+#att_zone {
+    min-height: 100px;
+    border: #8c7568 solid 1px;
+}
+#att_zone:empty:before {
+    content: attr(data-placeholder);
+    color: #999;
+    font-size: .9em;
+}
+#att_zone:empty{
+    padding: 5px;
+}
+#att_zone>div{
+    display:inline-block;
+    position:relative;
+    width:47.5%;
+    margin:5px;
+    z-index:1; 
+}
+#att_zone>div>img{
+    width:100%;
+    height:100%;
+    z-index:none;
+}
+#att_zone>div>input{
+    height:30px;
+    position:absolute;
+    font-size:18px;
+    font-weight: bold;
+    top:-5px;
+    right:0px;
+    z-index:999;
+    color:rgb(21, 15, 15);
+    background-color: rgb(255, 255, 255);
+    border: 0;
+}
+.btn-upload {
+    width: 80px;
+    padding: 5px 10px;
+    margin-top: 10px;
+    font-size: 14px;
+    background: #fff;
+    border: 1px solid rgb(77,77,77);
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-upload:hover{
+    background: rgb(130, 130, 130);
+    color: #fff;
+}
+#btnAtt {
+    display: none;
+}
+.review_button{
+    margin-top: 15px;
+    justify-content: center;
+}
+.review_button input{
+    display: block;
+    width: 80px;
+    height: 35px;
+    margin: 0 5px;
+    font-size: 16px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background-color: #f25d07;
+    cursor: pointer;
+}
+.review_button input:last-child{
+    background-color: #8c7568;
+}
