--- a/css/store.css
+++ b/css/store.css
@@ -97,14 +97,14 @@ header{
 }
 #left_content{
     width: 300px;
-    background-color: #ffebc6;
-    padding: 20px 10px;
+    background-color: #F2f2f2;
+    padding: 5px;
     border-radius: 10px;
     float: left;
 }
 .left_menu>li{
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 .left_menu>li:last-child{
     margin-bottom: 0;
@@ -112,20 +112,22 @@ header{
 .left_menu>li>p{
     width: 100%;
     height: 50px;
-    background-color: white;
+    background-color: rgb(255, 149, 57);
+    color: white;
     padding: 10px;
     line-height: 30px;
     font-size: 18px;
     cursor: pointer;
-    border-bottom: 1px solid #ffd381;
-    border-radius: 10px 10px 0 0;
+    /* border-bottom: 1px solid #ffc821; */
+    border-radius: 5px;
 }
 .left_menu>li>p span{
     font-size: 20px;
     font-weight: 600;
 }
 .left_menu>li i{
-    color: #ffd381;
+    /* color: #F2762E; */
+    color: white;
 }
 .left_menu>li .i_menu{
     margin-right: 10px;
@@ -137,47 +139,71 @@ header{
 }
 
 .left_menu .submenu{
-    background-color: #fffbf5;
-    /* background-color: #fff; */
-    display: none;
+    background-color: white;
+    /* display: none; */
 }
 .cate_city .submenu{
     width: 100%;
     height: 180px;
     padding: 10px 0;
-    padding-left: 50px;
-    list-style: square;
+    /* padding-left: 50px; */
 }
 .cate_menu .submenu{
     width: 100%;
     overflow: hidden;
     padding: 10px 0;
-    padding-left: 50px;
-    list-style: square;
+    /* list-style: square; */
 }
 .cate_city .submenu li{
     width: 50%;
+    text-align: center;
     color: #ffc821;
     float: left;
+    border-right: 1px solid rgb(229, 229, 229);
+    border-bottom: 1px solid rgb(229, 229, 229);
+    letter-spacing: 2px;
+}
+.cate_city .submenu li:nth-child(even){
+    border-right: none;
+}
+.cate_city .submenu li:last-child,
+.cate_city .submenu li:nth-child(7){
+    border-bottom: none;
 }
 .cate_menu .submenu li{
     width: 100%;
     color: #ffc821;
     float: left;
+    padding-left: 30px;
+    border-bottom: 1px solid rgb(229, 229, 229);
 }
 .cate_city .submenu li a,
 .cate_menu .submenu li a{
     display: inline-block;
+    width: 50%;
+    padding-left: 10px;
     height: 40px;
     line-height: 40px;
     font-size: 16px;
     position: relative;
 }
+.cate_menu .submenu li::before{
+    content: '-';
+    padding-right: 10px;
+    font-weight: 900;
+    color: #ff8301;
+}
 .submenu li a.on{
     font-weight: 600;
+    border-bottom: 2px solid #F2762E;
 }
-.cate_city .submenu li a:hover{
+.cate_city .submenu li a:not(.on):hover{
     font-weight: 600;
+    border-bottom: 2px solid #ffc401;
+}
+.cate_menu .submenu li a:not(.on):hover{
+    font-weight: 600;
+    border-bottom: 2px solid #ffc401;
 }
 
 .cate_theme .submenu{
@@ -185,10 +211,12 @@ header{
     overflow: hidden;
 }
 .cate_theme .submenu li{
+    width: 50%;
     float: left;
     line-height: 40px;
     font-size: 16px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
+    padding: 3px 0;
 }
 .cate_theme .submenu li:last-child{
     clear: both;
@@ -266,7 +294,8 @@ header{
     width: 100%;
     height: 130px;
     padding: 30px;
-    background-color: #fffaf1;
+    background-color: #fff2e4;
+    border-radius: 10px 10px 0 0;
 }
 .right_top h3{
     font-size: 28px;
@@ -277,7 +306,7 @@ header{
 .right_top .tag{
     display: inline-block;
     padding: 7px 15px;
-    background-color: #ffc821;
+    background-color: #F2762E;
     color: white;
     margin-right: 10px;
     border-radius: 12px;
@@ -288,9 +317,10 @@ header{
 }
 .tab_wrap li:not(.tab_on){
     cursor: pointer;
+    border-top: 1px solid #ffc821;
 }
 .tab_wrap li:not(.tab_on):hover{
-    border-top: 1px solid rgb(255, 224, 147);
+    background-color: white;
 }
 .tab_wrap .tab_on{
     border: 1px solid #ffc821;
@@ -304,9 +334,8 @@ header{
     height: 50px;
     text-align: center;
     line-height: 50px;
-    background-color: #fffaf1;
+    background-color: #fff2e4;
     border-left: 1px solid rgb(255, 224, 147);
-    color: gray;
 }
 .tab_wrap li:first-child{
     border-left: none;
@@ -607,9 +636,12 @@ header{
     color: coral;
 }
 
-#store_map{
+/* #store_map{
     width: 300px;
     height: 300px;
+} */
+iframe{
+    border:gray solid 1px;
 }
 .store_table{
     width: 100%;
